# mcp-client-rs

./: .gitignore  Cargo.toml  Readme.md  prompt.txt
examples/: initialize_and_call_tools.rs
src/: client.rs  lib.rs  main.rs  protocol.rs  protocol_manager.rs  types.rs
